AP-181 counts IamAppIdToken instead of IamUser and updates 'it' in SPY test in common.spec.js, removes socketPost() in common_app.js, replaces socketUpdate() with socketPost() in bffConnect() in bff.js, removes socketUpdate() and sets headers and close event in socketPost() in socket.js, adds server_uuid and to path /bff/app_id/v1/server-app/${resource_id} in OpenApi.json, replaces socketConnectedGetAppIdTokenRecord() with uuid parameter in getAppStart() in src/common.js
